[추가] 세션으로 로그인 하는 방법

--- a/16. Spring MVC/15. Login.md
+++ b/16. Spring MVC/15. Login.md
@@ -139,5 +139,229 @@ private void expireCookie(HttpServletResponse response, String cookieName) {
 
 
 
+
 ### 세션
 
+쿠키는 보안이슈가 있어서 중요한 정보는 모두 서버에 저장해야 하고, 클라이언트와 서버는 추정 불가능한 임의의 식별자 값으로 연결해야 한다. 이렇게 연결을 유지하는 방법을 세션이라고 한다.
+
+**세션 동작 방식**
+
+사용자가 아이디 비밀번호를 입력하면 먼저 검증을 마친 후 만들어둔 세션 저장소에 세션 ID와 VALUE를 만든다. 참고로 자바가 지원하는 UUID는 추정이 불가능하다. 그리고 이 아이디를 키로 잡고 값을 회원 객체로 넣어둔다. 그리고 세션 id를 쿠키로 전달한다. 쿠키는 어쩔 수 없이 사용해야 한다. 서버는 클라이언트에 mySessionId라는 이름으로 세션 ID만 쿠키에 담아서 전달한다.
+
+다만 중요한 포인트는 <u>회원과 관련된 정보는 전혀 클라이언트에 전달하지 않는다는 것</u>이다.
+
+그리고 이제 쿠키를 전달받으면 세션 저장소를 뒤져서 회원을 찾아낸다. 이렇게 하면 쿠키 값을 변조할 수 있어도 예상 불가능한 복잡한 세션ID를 사용하기 때문에 해결할 수 있다. 그리고 쿠키정보엔 중요한 정보가 없다. 그리고 세션의 만료시간이 길지 않아 사용할 수 없다.
+
+
+
+세션을 직접 개발해서 적용해보자.
+
+이미 있지만, 깊이 있게 이해하기 위해 직접 해본다.
+
+다음 3가지 기능을 제공해야 한다.
+
+- 세션 생성
+  - sessionId 생성 (임의의 추정 불가능한 랜덤 값)
+  - 세션 저장소에 sessionId와 보관할 값 저장
+  - sessionId로 응답쿠키를 생성해서 클라이언트에 전달
+- 세션 조회
+  - 클라이언트가 요청한 sessionId 쿠키의 값으로, 세션 저장소에 보관한 값 조회
+- 세션 만료
+  - 클라이언트가 요청한 sessionId 쿠키의 값으로, 세션 저장소에 보관한 sessionId와 값 제거
+
+
+
+다음과 같이 직접 세션을 만들었다.
+
+```java
+@Component
+public class SessionManager {
+
+	public static final String SESSION_COOKIE_NAME = "mySessionId";
+	private final Map<String, Object> sessionStore = new ConcurrentHashMap<>();
+
+	/**
+	 * 세션 생성
+	 */
+	public void createSession(Object value, HttpServletResponse response) {
+		String sessionId = UUID.randomUUID().toString();
+		sessionStore.put(sessionId, value);
+
+		Cookie mySessionCookie = new Cookie(SESSION_COOKIE_NAME, sessionId);
+		response.addCookie(mySessionCookie);
+	}
+
+	/**
+	 * 세션 조회
+	 */
+	public Object getSession(HttpServletRequest request) {
+		Cookie sessionCookie = findCookie(request, SESSION_COOKIE_NAME);
+		if (sessionCookie == null){
+			return null;
+		}
+		return sessionStore.get(sessionCookie.getValue());
+	}
+
+	/**
+	 * 세션 만료
+	 */
+	public void expire(HttpServletRequest request){
+		Cookie sessionCookie = findCookie(request, SESSION_COOKIE_NAME);
+		if( sessionCookie != null){
+			sessionStore.remove(sessionCookie.getValue());
+		}
+	}
+
+	public Cookie findCookie(HttpServletRequest request, String cookieName){
+		return Arrays.stream(request.getCookies())
+			.filter(cookie -> cookie.getName().equals(cookieName))
+			.findAny()
+			.orElse(null);
+	}
+
+}
+
+```
+
+그리고 Test를 실행해보자.
+
+```java
+class SessionManagerTest {
+
+	SessionManager sessionManager =new SessionManager();
+
+	@Test
+	void createSession() {
+
+		// 세션 생성
+		MockHttpServletResponse response = new MockHttpServletResponse();
+		Member member = new Member();
+		sessionManager.createSession(member, response);
+
+		// 요청에 응답 쿠키 저장
+		MockHttpServletRequest request = new MockHttpServletRequest();
+		request.setCookies(response.getCookies());
+
+		// 세션 조회
+		Object result = sessionManager.getSession(request);
+		assertThat(result).isEqualTo(member);
+
+		// 세션 만료
+		sessionManager.expire(request);
+		Object expired = sessionManager.getSession(request);
+		assertThat(expired).isNull();
+	}
+}
+```
+
+request랑 response가 실제로 일어나지 않기 때문에 스프링이 지원하는 Mock 객체, 가짜 객체를 이용하면 된다.
+
+그럼 잘 돌아가는 것을 확인할 수 있다.
+
+그리고 컨트롤러에는 Manager를 주입시켜서 사용하면 된다.
+
+```java
+sessionManager.createSession(loginMember, response);
+```
+
+그리고 이렇게 세션을 추가할 수 있다.
+
+
+
+### 서블릿 HTTP 세션
+
+세션은 대부분의 웹 애플리케이션에 필요하다. 그래서 서블릿은 세션을 위해 HttpSession이라는 기능을 제공해준다. 이 역시 직접 만든 SessionManger 와 같은 방식으로 동작한다. 한번 개발해보자.
+
+이를 사용하기 위해서는 HttpServletRequest를 파라미터로 받아야 한다. 그리고 다음과 같이 사용할 수 있다.
+
+```java
+// 세션이 있으면 있는 세션 반환, 없으면 신규 세션 생성
+HttpSession session = request.getSession();
+// 세션에 로그인 회원정보 보관
+session.setAttribute(LOGIN_MEMBER, loginMember);
+```
+
+`getSession()` 의 인자에는 true가 기본 값이며 true를 해놓으면 각주대로 진행된다. 만약 false로 바꾸면, 세션이 있으면 반환하지만 세션이 없으면 새로운 세션을 생성하지 않고 null을 반환한다.
+
+꺼내는 것은 다음과 같이 꺼내서 사용할 수 있다.
+
+```java
+@GetMapping("/")
+public String homeLoginV3(HttpServletRequest request, Model model) {
+
+  HttpSession session = request.getSession(false);
+  if (session == null){
+    return "home";
+  }
+
+  Member loginMember = (Member)session.getAttribute(LOGIN_MEMBER);
+
+  if (loginMember == null) {
+    return "home";
+  }
+  //로그인
+  model.addAttribute("member", loginMember);
+  return "loginHome";
+}
+```
+
+
+
+세션을 더 편리하게 사용해보자. 지금도 불편한지 잘 모르겠지만 더 편하게 쓸 수 있는 방법이 있다.
+
+그리고 편했던 것에는 늘 애너테이션이 있다.
+
+위를 다음과 같이 개선이 가능하다.
+
+```java
+@GetMapping("/")
+public String homeLoginV3Spring(@SessionAttribute(name = LOGIN_MEMBER, required = false) Member loginMember, Model model) {
+
+  if (loginMember == null) {
+    return "home";
+  }
+  //로그인
+  model.addAttribute("member", loginMember);
+  return "loginHome";
+}
+```
+
+훨씬 깔끔하게 사용하게 진행이 된다.
+
+
+
+### TrackingModes
+
+로그인을 완전 처음 시도하면 URL에 `jsessionId`를 포함하고 있다. 서비스할 때 굳이 포함하고 있지 않는 것이 좋다. 이건 웹 브라우저가 쿠키를 지원하지 않을 때 URL을 통해 세션을 유지하는 방법이다. 근데 이 방법은 계속해서 이 세션아이디를 전달해야 한다. 서버 입장에서 웹브라우저가 쿠키를 지원하는지 안하는치 최초에 판단하지 못해서, URL에 전달한다. 하지만 거의 안쓴다.
+
+그래서 URL 전달 방식을 끄고 항상 쿠키를 통해서만 세션을 유지하고 싶으면 properties에 옵션하나 넣어주면 된다.
+
+```properties
+server.servlet.session.tracking-modes=cookie
+```
+
+
+
+### 세션 타임아웃 설정
+
+세션은 사용자가 로그아웃을 직접 호출해서 `session.invalidate()` 가 호출되는 경우에 삭제된다. 그런데 대부분의 사용자는 로그아웃을 선택하지 않고, 그냥 웹 브라우저를 종료한다. 문제는 HTTP가 비연결성이므로 서버 입장에서는 사용자가 웹 브라우저를 종료한 것인지 아닌지를 인식할 수 없다. 따라서 서버에서 세션 데이터를 언제 삭제해야 하는지 판단하기가 어렵다.
+
+근데 남아있는 세션을 무한정 보관하면 누군가가 그 쿠키를 얻게된다면 악의적인 요청을 할 수 있고, 세션은 기본적으로 메모리에 생성되므로, 메모리의 크기가 무한하지 않아 문제가 있다.
+
+**세션의 종료 시점**
+
+세션 생성 시점으로부터 30분 정도로 잡으면 적당할까? 근데 30분이 지나면 세션이 삭제된다. 그러면 30분마다 로그인하라고 뜰것이다. 그래서 제일 나은 대안으로 세션을 생성 시점부터 30분이 아니라 사용자가 서버에 최근에 요청한 시간을 기준으로 30분 정도를 유지해주는 것이다. 이렇게 하면 사용자가 서비스를 사용하고 있으면, 세션의 생존시간이 30분으로 계속 늘어나게 된다. `HttpSession`은 이 방식을 사용한다.
+
+**세션 타임아웃 설정**
+
+스프링 부트로 글로벌 설정할 수 있다.
+
+properties로 가서 다음과 같이 쓰자. 
+
+```properties
+server.servlet.session.timeout=1800
+```
+
+글로벌 설정은 분 단위로 설정해야 한다. 다만 특정 세션 단위로 시간 설정한다면 초단위로 쓸 수 있다.
+
+세션은 실제로 최소한의 데이터만 보관해야 한다. 그래서 여기서는 멤버의 객체를 담았지만 **실제로는 이메일같이 최소한의 단위만 담아야 한다. 아니면 메모리 사용이 누적될 수 있다.**
