[추가] 언젠가 정리할 CS지식들 추가

--- a/여러가지 학습/공부하면서 모르기에 정리해야 하는 공부들.md
+++ b/여러가지 학습/공부하면서 모르기에 정리해야 하는 공부들.md
@@ -240,14 +240,214 @@ network(socket)
 근데 그럼 I/O작업 완료를 어떻게 확인하는가
 결과처리방식:
 1. 완료됐는지 반복적으로 확인, 완료된 시간과 확인 시간사이의 갭으로 처리속도 감소될 수 있음
-  확인 자체가 CPU낭비임, 서버는 소켓이 개많을테니 계속 데이터확인자체가 낭비임
-  블라킹으로하면 다른 소켓에 처리를 못해줌 다른 클라이언트는 불만이됨
-  그래서 서버는 넌블라킹을 써야함
+     확인 자체가 CPU낭비임, 서버는 소켓이 개많을테니 계속 데이터확인자체가 낭비임
+       블라킹으로하면 다른 소켓에 처리를 못해줌 다른 클라이언트는 불만이됨
+       그래서 서버는 넌블라킹을 써야함
 2. 다중입출력(I/O multiplexing) 관심있는 I/O작업들을 동시에 모니터링하고 완료된 I/O작업들을
-  한번아 알려줌,
-  epoll리눅스, kqueue맥, iocp윈
-  네트워크 통신에 많이 사용함, 톰캣이나 이런게 I/O멀티플렉싱이 해줌 => 중요함
+     한번아 알려줌,
+       epoll리눅스, kqueue맥, iocp윈
+       네트워크 통신에 많이 사용함, 톰캣이나 이런게 I/O멀티플렉싱이 해줌 => 중요함
 
 3. 콜백이나 시그널, 콜백이나 시그널을 통해.. (널리안씀)
 
 컨텍스트스위칭에서 왜 스레드가 더빠를까?
+
+참고로 쓰레드는 CPU혹은 그내부 코어에서 실행되는 기본 단위다.
+언제 발생할까? quantum을 다사용, I/O작업, 다른리소스, 인터럽트 기다리는 등등
+
+멀티태스킹시스템에서 컨텍스트 스위칭?
+이건 누구에의해 실행되나? 스위칭 자체를 총괄하는가? (누가 발생,트리거가아님)
+OS 커널? 커널: 운영체제에서 각종 리소스를 관리 감독/하는 역할 이가 통제하면서 
+컨텍스트 스위칭을 함
+다른 프로세스끼리 스위칭: 프로세스 컨텍스트 스위칭
+스레들끼리: 스레드 컨텍스트 스위칭
+공통점
+1. 둘다 커널모드에서 실행된다.
+  프로세스가 실행되다 하드웨어와 밀접한, 리소스 들을 다룰때 직접 접근하는게 아니라 운영체제를통해
+  접근하게 그 운영체제중에서도 커널을 통해 접근함. 프로세스에서 커널로 통제권이 넘어가서 진행되는걸
+  커널모드라함.
+2. CPU의 레지스터 상태를 교체한다. 씨피유 안에는 레지스터는 각종명령어를 수행하기위한 데이터를 저장하는 존재
+  기존 프로세스를 처리하다가 다른 프로세스로 바꿀때 레지스터에 저장함. 그래야 다시 이어서 수행할 수 있음
+
+차이점
+1. 스레드끼리는 메모리를 공유하기 때문에 별문제가 없다. 반면 프로세스 컨텍스트 스위칭은
+  가상 메모리 주소 관련 처리를 추가로 수행해야한다. MMU(메모리 매니지먼트 유닛), TLB,(매핑 캐시)
+  둘다 비워야 함..아무튼 이건 대충 넘기고 이 주소관련 처리때문에 더 걸린다.
+
+커널모드설명: 
+쓰레드끼리: 스위칭이 발생하면 커널모드진입: 쓰던 쓰레드 상태저장 다음 쓰레드 상태 로딩 커널모드 종료
+통제는 다시 그 쓰레드에 넘겨줌, 스위칭이 또 발생하면 다시 커널모드로 넘어가면서 통제권을 넘겨주고
+반복..
+
+프로세스끼리: 원래는 기존꺼 "상태"저장, 새로운거 "상태" 로딩에서 멈췄다면 프로세스는 이작업이 끝나고
+메모리 작업까지 일어난다. 서로다른 프로세스이므로 MMU가 바라보는 메모리가 해당 메모리로 바뀜
+그리고 TLB(캐시)가 가상메모리와 실제 메모리가 바라보는 주소매핑하는 비움!!!! 
+
+그래서 쓰레드끼리는 메모리주소 처리를 안하기 때문에 빠르다.
+컨텍스트 스위칭이 미치는 간접적인 영향
+캐시오염: 씨피유는 항상 메모리 접근보다 자주쓰는걸 캐시에 올려두고 쓴다.
+근데 컨텍스트 스위칭이 된후면 캐시는 이전에 쓰던거 들고있으므로 오염되어있음.
+그래서 성능에도 안좋은 영향을 끼치며, 캐시도 날려버리기도함.
+따라서 유저관점에서 컨텍스트 스위칭이라나 순수한 오버헤드
+
+
+스레드의 종류
+하드웨어스레드
+OS스레드
+네이티브 스레드
+커널스레드
+유저스레드
+그린스레드
+
+코어의 고민: 메모리에서 데이터를 기다리는 시간이 꽤됨(연산작업에 비해)
+메모리를 기다리는 동안 다른스레드를 사용하는 건?
+그래서 그 타임동안 뭔가를 실행하게됨 이 각각의 스레드를 하드웨어 스레드라함
+인텔의 하이퍼 스레딩: 물리적인 코어마다 하드웨어 스레드가 두개
+OS관점에서는 가상의 코어, 만약에 싱글코어CPU에 하드웨어 스레드가 2개면 OS는 이 CPU를
+듀얼코어로 인식하고 듀얼코어에 맞춰 OS레벨의 스레드들을 스케줄링함.
+
+OS쓰레드: OS커널에서 생성되고 관리되는 스레드 CPU에서 실제로 실행되는 단위,
+CPU 스케줄링의 단위. OS스레드들이 컨텍스트스위칭이 발생하면 커널이 개입, 즉
+유저모드에서 커널모드로전환 즉 비용이 발생
+사용자 코드와 커널코드 모두 OS스레드에서 실행된다. 시스템 콜이 커널모드로 전환이되어
+커널코드가 실행되어도 os스레드에서 실행됨. 시스템 콜이 돌아와 유저모드로 돌아와도
+os스레드에서 실행됨 (os스레드는 네이티브스레드, 커널스레드, 커널-레벨스레드, os-레벨스레드)
+라고도함
+
+유저스레드: 유저프로그램과 관련된 스레드, 유저레벨 스레드라고도한다. 
+스레드 개념을 프로그래밍레벨에서 추상화한것이다. 즉 유저스레드가 cpu에서 실행되려면
+os스레드와 반드시 연결되어야 한다.
+
+그럼 유저와 os를 어떻게 연결시킬것인가?
+1:1모델 (자바) 
+어떤 특징이 있을까? 스레드관리를 os에 위임하게 된다. 스케줄링을 포함해서.. 그래서
+스케줄링도 커널이 수행하게됨. 즉 멀티코어도 잘 활용함
+한프로세스가 여러개의 스레드를 가져도 각각 코어에 할당하므로 하나가 블락되어도
+나머지는 잘 동작함. 근데 레이스 컨디션이 발생할 수 있다.
+
+유저스레드가 여러개고 os스레드가 1개면 many-to-one일수있다. 그러면 컨텍스트 스위칭이
+더빠르다. 왜냐면 유저레벨에서만 일어나고 커널이 개입하지 않으므로!! os스레드만 보면
+싱글이기때문에 레이스컨디션이 발생이 적어진다. 근데 블라킹에서 문제가 생기며, 그래서
+이문제를 해결하기 위해 넌블락 io를 사용하게됨
+멀티코어를 활용하지 못한다. 
+
+many-to-many위 둘을 합침 문제는 구현이 복잡함 ㅋㅋ
+
+커널쓰레드?: os커널의 역할을 수행하는 스레드라고 이해하기도함
+
+스레드풀?
+요청이 들어오면 요청마다 스레드를 하나에 할당하는 모델이 있다.
+만약 스레드를 만들고 버리는 방식으로하면 생성에 소요되는 시간이 아까움, 커널에서 생성되는 것이기 때문
+그리고 스레드가 계속생성되면 컨텍스트 스위칭 증가 오버헤드 증가 서버 터짐, 또는 메모리 터짐
+그래서 미리 스레드를 만들어놓고 요청이오면 그 요청은 큐에들어감 그리고 일없는 스레드를 할당해줌
+그리고 끝나면 스레드는 다음요청이 올때까지 다시 풀로가서 대기, 그래서 미리만들어 재사용하므로 
+생성시간 막고, 무제한생성방지, 시스템에 문제가 생기지 않게함
+그럼 스레드풀은 여러작업을 동시에 처리할 떄 사용
+task를 subtask로 나뉘어서 동시에 처리, 몇천억개의 아이템 가격을 계산할 때.. 등.. 순서상관없이
+동시 실행 가능한 task같은것도 스레드풀 사용이 가능하다
+
+스레드 풀에서 실행될 task개수에 제한이 없다면 스레드 풀의 큐가 사이즈 제한이있는지 확인해야함
+만약 큐에 요청이 무한정쌓인다면? 메모리고갈 위험, 따라서 당연히 제한줘야함
+자바에서 익스큐터클래스에서 스레드풀 고정가능, 근데 이거 큐 제한 무제한임 안심불가능
+
+동기: 차례차례 실행하는것, 여러 작업들을 순차적으로 실행하도록 개발
+비동기: 작업들을 독립적으로 실행하도록 개발 ( 스레드를 이용 ) 참고로 멀티스레딩은 비동기프로그래밍의 한 종류
+비동기 프로그래밍을 가능하게 하는방법: 멀티스레딩, 넌블락I/O을 잘버무리면 좋아진다.
+
+하나의 서비스는 기능과 역할에 따라 여러개의 마이크로 서비스로 구성되고 이들 사이에는
+빈번하게 커뮤니케이션이 발생함. 이 커뮤니케이션을 어케하냐에 따라 동기, 비동기커뮤니케이션
+근데 동기로 짜면 하나 불능에 빠지면 나머지도 불능이될 수 있음, 그래서 비동기로 짜는게 중요
+메시지 Q라는 버퍼를 통해 소통하면 됨 서로 메시지 큐를 보면서 진행하면된다.
+메시지만 전달하기 된다면 비동기로하면된다.
+
+CPU bound
+IO bound
+burst: 어떤현상이 짧은시간안에 집중적으로 일어나는 일
+씨피유 버스트: 프로세스가 cpu에서 한번에 연속적으로 실행되는 시간
+io버스트: 프로세스가 io작업을 요청하고 결과를 기다리는 시간
+
+CPU BOUND 프로세스: CPU 버스트가 많은 프로세스: 동영상편집프로그램, 머신러닝프로그램
+연산이 많은애들이 주로 CPU
+IO BOUND: 백엔드 API서버 서로 데이터 요청이 엄청많음, 캐시나 디비, 등 네트워크타는 작업들
+
+그래서 씨비유 바운드 프로그램에서는 적절한 스레드수는 CPU + 1개쯤..
+아이오바운드는 더 사용할 수 있지만 알아서 찾자.. 나머진 분석해서 결정하는게 좋다.
+
+유저모드: 개발하는 프로그램은 일반적으로 유저모델에서 실행 
+커널모드: 인터럽트나 시스템콜을 호출하면 커널모드로 전환 프로그램의 현재 CPU상태를 저장
+그리고 커널이 인터럽트나 시스템콜을 직접 처리, 커널코드가 진행, 그리고 CPU복원
+다른프로그램 실행했다 복원할수도있음. 그리고 통제권을 유저에 넘기고 유저모드
+커널모드 만든이유: 시스템을 보호하기위해 하드웨어를 통제함
+인터럽트: 다양한종류의 이벤트나 이벤트 발생시.. 전원에 문제, IO, 시간이 다됐을때 0으로 나눴을떄
+잘못된메모리 공간에 접근을 시도할 때 => 인터럽트
+시스템콜: OS커널이 제공하는 서비스를 이용하곳싶을때, 프로세스 스레드 관련 (생성, 킬)
+파일 IO, 소켓관련, 키보드입력받을때 프로세스통신 등...
+시스템콜이 해당커널코드가 커널모드에서 진행
+
+하드웨어 혹은 시스템관련기능은 어떤 프로그램이라도 반드시 시스템 콜을 통해서만 사용 가능
+우리가 지금껏한 IO나 네트워크 프로세스 스레드는 프로그래밍 언어들이 시스템 콜들 포장하여
+간접적으로 사용할 수 있도록 제공했기 때문
+
+데드락: 두개이상의 프로세스 혹은 스레드가 서로가가진 리소스를 기다리는 상태, 만드는 4가지조건
+1. 뮤추얼익스클루션, 단순히 락일수도 있고, cpu 메모리, 프린터 등 여러가지가 해당된다
+2. 홀드엔 웨이트:하나이상의 리소스를 취득한 상태에서 다른프로세스가 사용하고있는 리소스를 기다림
+3. no preemption: 리소스반환은 오직 그 리소스를 취득한 프로세스만할수있다.
+4. 써큘러웨이트: 프로세스들이 순환하는 형태로 서로의 리소스를 기다림
+
+
+os의 데드락 해결방법: 
+1. 데드락 방지: 시스템 레벨에서 위 4가지중 하나라도 만족시키지 않게 디자인
+- 1번방지: 리소스를 공유가능하게함 ( 불가능 )
+- 2번방지: 사용할 리소스를 모두 획득한 뒤에 시작 혹은 리소스를 전혀 가지지 않은상태에서만 리소스 요청
+  리소스 사용효율이 떨어짐, 인기가많은 리소스에 출발하게됨(스타베이션)
+- 추가적인 리소스를 기다려야한다면 이미 획득한 리소스를 다른 프로세스가 선점하도록함(모니터랑비슷)
+- 리소스에 순서체계를 부여해서 오름차순으로 리소스를 요청, 순환을 방지 = 제일많이 사용되는 방지
+
+데드락 회피: 실행환경에서 추가적인 정보(현재 사용가능한 리소스, 할당된 리소스 반환될 리소스)를 활용해서 발생할거같은 상황을 회피
+
+- 데드락의 감지와 복구
+  데드락을 허용하고 발생하면 복구하는 전략
+1. 프로세스를 종료 ㅋㅋ, 한명씩한명씩 강제종료... 리스크가 크다( 최후의 카드 )
+2. 리소스의 일시적인 선점을 허용
+
+데드락무시: 아몰랑: 개발자가 알아서하겠지 ㅋㅋㅋ은근 많음 ㅋㅋ
+
+cpu 스케줄러 : cpu가 항상 놀지 않도록 일을할수있도록 프로세스를 선택하는 일을함
+레디큐에서 러닝하도록 하나 뽑음
+선점방식
+nonpreemptive : 비선점 스케줄링: 러닝중이던게 끝나거나, IO하러가거나, 자발적으로
+레디큐에 들어감, 모두 자발적으로 러닝상태에서 빠져나가기 때문에 비선점 스케줄링임
+운영체제가 강제로하지 않음, 신사적이고 협력적임, 느린응답성,,
+preemptive: 선점 스케줄링: 비선점에 더해서~ , 개입해버림 퀀텀 다쓰면 레디큐로 보냄
+웨이팅상태에 있던 프로세스가 레디상태로 갔는데 우선순위가 높아서 먼저 실행시키고싶다면
+스케줄러가 개입해서 바꿔버림, 적극적이고 강제적이며 빠른응답
+알고리즘으로는
+FCFS 먼저 도착한 순서대로 처리(큐방식)
+SJF: 씨피유버스트가 가장 짧은 프로세스부터실행
+SRTF: 남은 씨피유 버스트가 가장짧은 프로세스부터 실행
+Priority: 우선순위가 높은 프로세스부터 실행
+RR: 멀티태스킹과 비슷한 스케줄링 방식 타임슬라이스로 나눠서 번갈아서 실행
+
+
+
+
+..
+
+디스패처: 선택된 프로세스를 실제로 수행될 수 있도록 만드는 역할(컨텍스트 스위칭, 커널모드에서)
+커널모드에서 유저모드로 전환하는일, 어디서작업을해야할지 적절한 위치로 이동시키는것도
+디스패처가! 그래서 선택된 프로세스에게 cpu를 할당하는 역할.
+
+
+OS프로세스 상태는 어떻게 변하지?
+레디큐에 있는 프로세스는 스케줄러와 디스패처에 의해 러닝으로 이동하거나 돌아옴
+웨이팅에 갔다가 다시 레디로감
+
+자바쓰레드의 상태
+뉴= 시작안함
+러너블 : 실행중인 상태, 다른 리소스를 기다리는 상태도 포함
+블락드: 크리티컬섹션으로 들어가려고 모니터락을 얻기위해 기다리는중
+웨이팅: 다른스레드 기다림(모니터와 관련된 메서드중 WAIT)
+타임드웨이팅: 제한시간을 두고 다른스레드를 기다리는 상태, SLEEP, TIMEOUT
+터미네이티드 끝남
+
+자바는 기본적으로 웨이팅에서 깨어나면 블락드로 넘어가서 락을 기다린다.
