[수정] 오타수정

--- a/09. Java Spring/08. Singleton Container.md
+++ b/09. Java Spring/08. Singleton Container.md
@@ -33,7 +33,7 @@ MemberService memberService = appConfig.memberService();
 - 테스트하기가 어렵다.
 - 내부 속성을 변경하거나 초기화하기 어렵다.
 - private 생성자로 자식 클래스를 만들기 어렵다.
-- 결론적으로 유연성이 떨어진다. DI 적용하기 불편해지기 때문이다/
+- 결론적으로 유연성이 떨어진다. DI 적용하기 불편해지기 때문이다.
 - 안티패턴으로 불리기도 한다.
 
 
