--- a/14. TDD/08. Maintenance.md
+++ b/14. TDD/08. Maintenance.md
@@ -2,7 +2,7 @@
 
 
 
-빠른 서비스 출시를 위해 CI(Continuous Integration)와 CD(Continuous Deployment)를 도입하는 곳이 증가하고 있다. 지속적으로 통합하 출시 가능한 상태로 만들고 배포하려면 추가한 코드가 기존 기능을 망가뜨리지 않는지 확인할 수 이썽야 한다. TDD를 하는 과정에서 작성한 테스트 코드는 CI/CD에서 자동화 테스트로 사용되어 버그가 배포되는 것을 막아주고 이는 소프트웨어 품질이 저하되는 것을 방지한다.
+빠른 서비스 출시를 위해 CI(Continuous Integration)와 CD(Continuous Deployment)를 도입하는 곳이 증가하고 있다. 지속적으로 통합하 출시 가능한 상태로 만들고 배포하려면 추가한 코드가 기존 기능을 망가뜨리지 않는지 확인할 수 있어야 한다. TDD를 하는 과정에서 작성한 테스트 코드는 CI/CD에서 자동화 테스트로 사용되어 버그가 배포되는 것을 막아주고 이는 소프트웨어 품질이 저하되는 것을 방지한다.
 
 테스트 코드도 그 자체로 코드이기 때문에 제품 코드와 동일하게 유지보수 대상이 된다. 테스트 코드를 유지보수하는 데 시간이 많이 들기 시작하면 점점 테스트 코드를 손보지 않아 실패하는 테스트가 증가하게 된다. 이를 방치하면 문제가 발생한다.
 
