--- a/09. Java Spring/02. Good OOP.md
+++ b/09. Java Spring/02. Good OOP.md
@@ -46,7 +46,7 @@
   - 다형성을 활용해보자.
   - 인터페이스를 구현한 새로운 클래스를 하나 만들어 새로운 기능을 구현
   - 하지만 구현 객체를 변경하려면 클라이언트 코드를 변경해야 한다.
-  - 분명 다혀성을 사용했지만 OCP원칙을 지킬 수 없다.
+  - 분명 다형성을 사용했지만 OCP원칙을 지킬 수 없다.
   - 객체를 생성하고, 연관관계를 맺어주는 별도의 조립, 설정자가 필요하다.
   - 이게 바로 스프링의 컨테이너가 해주는 것이다.
 - LSP: 리스코프 치환원칙(Liskov substitution principle)
