[추가] 타임리프 기본과 인터셉터에 관하여

--- a/16. Spring MVC/17. Spring Interceptor.md
+++ b/16. Spring MVC/17. Spring Interceptor.md
@@ -37,7 +37,7 @@ public interface HandlerInterceptor {
 }
 ```
 
-인터셉터는 컨트롤러 호출 전에 `preHandle`이 호출 되고 `postHandle`, 그리고 요청 이후 `afterCompletion`와 같이 단계적으로 세분화되어 있다. 그리고 서블릿필터는 request, response만 제공했지만 인터셉터는 어떤 컨트롤러(handler)가 호출되는지 호출 정보도 바등ㄹ 수 있다. 그리고 어떤 `modelAndView`가 반환되는지 응답 정보도 받을 수 있다.
+인터셉터는 컨트롤러 호출 전에 `preHandle`이 호출 되고 `postHandle`, 그리고 요청 이후 `afterCompletion`와 같이 단계적으로 세분화되어 있다. 그리고 서블릿필터는 request, response만 제공했지만 인터셉터는 어떤 컨트롤러(handler)가 호출되는지 호출 정보도 받을 수 있다. 그리고 어떤 `modelAndView`가 반환되는지 응답 정보도 받을 수 있다.
 
 
 
