--- a/16. Spring MVC/01. Web Application.md
+++ b/16. Spring MVC/01. Web Application.md
@@ -16,7 +16,7 @@
 웹 애플리케이션 서버(WAS)는 이러한 웹서버의 기능을 다 포함하는 것과 동시에 프로그램 코드를 실행해서 애플리케이션 로직을 수행한다.
 
 - 동적 HTML, HTTP API(JSON)
-- 서블링, JSP, 스프링 MVC
+- 서블릿, JSP, 스프링 MVC
 
 사실 웹서버와 웹어플리케이션 서버의 차이는 모호하긴 하다. 웹서버도 프로그램을 실행하는 기능을 포함하기도 하고, WAS도 웹 서버의 기능을 제공한다.
 
@@ -79,7 +79,7 @@ public class HelloServlet extends HttpServlet {
 
 장점
 
-- 동시 요철 처리 가능
+- 동시 요청 처리 가능
 - 리소스가 허용할 때까지 처리가능
 - 하나의 쓰레드가 지연되어도, 나머지 쓰레드는 정상속도
 
