--- a/19. Spring DB/03. Transaction Basic.md
+++ b/19. Spring DB/03. Transaction Basic.md
@@ -65,7 +65,7 @@
 
 ### 데이터베이스 연결 구조와 DB세션
 
-사용자는 WAS나 DB접근 툴 같은 클라이언트를 사용해서 DB 서버에 접근할 수 있다. 클라이언트는 ㅇB 서버에 연결을 요청하고 커넥션을 맺게 된다. 이때 DB 서버는 내부에 세션이라는 것을 만든다. 그리고 앞으로 해당 커넥션을 통한 모든 요청은 이 세션을 통해서 실행하게 된다.
+사용자는 WAS나 DB접근 툴 같은 클라이언트를 사용해서 DB 서버에 접근할 수 있다. 클라이언트는 DB 서버에 연결을 요청하고 커넥션을 맺게 된다. 이때 DB 서버는 내부에 세션이라는 것을 만든다. 그리고 앞으로 해당 커넥션을 통한 모든 요청은 이 세션을 통해서 실행하게 된다.
 
 즉 SQL을 보내면 세션이 SQL을 실행한다. 세션이 트랜잭션을 시작하고 커밋 또는 롤백을 통해 트랜잭션을 종료한다. 그리고 이후에 새로운 트랜잭션을 다시 시작할 수 있으며, 커넥션을 닫거나 DBA가 세션을 강제로 종료하면 세션은 종료된다.
 
