[추가] 포인트컷, 어드바이스, 어드바이저에 대하여

--- a/17. Spring Advanced/08. Spring Proxy.md
+++ b/17. Spring Advanced/08. Spring Proxy.md
@@ -74,3 +74,125 @@ public class ProxyFactoryTest {
 
 
 이 프록시 팩토리는 원래 인터페이스인 경우 JDK 동적프록시, 구체 클래스인 경우 CGLIB를 사용했다. 만약 CGLIB만 사용하고 싶으면 `proxyTargetClass=true` 로 설정하여 사용할 수 있는데, 스프링 부트는 AOP를 적용할 때 기본적으로 이 옵션을 킨다. 이유는 추후에 설명한다.
+
+
+
+### 포인트 컷, 어드바이스, 어드바이저
+
+스프링 AOP에 나오는 이 단어들도 이참에 정리해보자.
+
+- 포인트컷(Pointcut): 어디에 부가 기능을 적용할지, 어디에 부가 기능을 적용하지 않을지 판단하는 필터링 로직이다. 주로 클래스와 메서드 이름으로 필터링한다. 이름 그대로 어떤 포인트(Point)에 기능을 적용할지 ㅎ지 않을지 잘라서(cut) 구분하는 것이다.
+- 어드바이스(Advice): 이전에 본 것처럼 프록시가 호출하는 부가 기능이다. 단순하게 프록시 로직이라 생각하면 된다.
+- 어드바이저(Advisor): 단순하게 하나의 포인트컷과 하나의 어드바이스를 가지고 있는 것이다.
+
+결과적으로 부가 기능을 적용해야 하는데, 포인트컷으로 어디에 적용할지 선택하고, 어드바이스로 어떤 로직을 적용할지 선택하는 것이다. 그리고 이 모든 것을 알고 있는 것이 어드바이저다.
+
+
+
+**역할과 책임**
+
+이렇게 구분한 것은 역할과 책임을 명확하게 분리한 것이다.
+
+- 포인트 컷은 대상 여부를 확인하는 필터 역할만 한다.
+- 어드바이스는 깔끔하게 부가 기능 로직만 담당한다.
+- 둘을 합치면 어드바이저이다.
+
+
+
+예시코드는 다음과 같이 짤 수 있다.
+
+```java
+public class AdvisorTest {
+
+	@Test
+	void advisorTest1() {
+		ServiceInterface target = new ServiceInterface();
+		ProxyFactory proxyFactory = new ProxyFactory(target);
+		DefaultPointcutAdvisor advisor = new DefaultPointcutAdvisor(Pointcut.TRUE, new TimeAdvice());
+		proxyFactory.addAdvisor(advisor);
+
+		ServiceInterface proxy = (ServiceInterface)proxyFactory.getProxy();
+
+		proxy.logic();
+		
+	}
+
+	@Slf4j
+	static class ServiceInterface {
+		public void logic(){
+			log.info("로직 실행");
+		}
+	}
+}
+```
+
+프록시 팩토리에 적용할 어드바이저를 저장하고, 어드바이저는 내부에 포인트 컷과 어드바이스를 모두 가지고 있다. 그리고 프록시 팩토리를 사용할 때 어드바이저는 필수이다. 만약 `addAdvice`를 통해 어드바이스를 족용한다면, 메서드 내부에서 위와 같은 어드바이저를 생성한다.
+
+포인트 컷을 따로 하지 않으면 재사용성이 떨어지니 나누는 것이 좋다.
+
+스프링이 제공하는 포인트 컷 내부에는 클래스와 메서드를 필터링하는 인터페이스가 있고, 이 둘 다 True를 반환해야만 어드바이스를 적용한다.
+
+스프링이 제공하는 포인트컷(`NameMatchMethodPointcut`)을 구현해보자. 실제로는 포인트컷이 엄청 많지만 제일 단순한 것으로 확인하자.
+
+```java
+@Test
+void springPointcut() {
+  ServiceInterface target = new ServiceInterface();
+  ProxyFactory proxyFactory = new ProxyFactory(target);
+  NameMatchMethodPointcut pointcut = new NameMatchMethodPointcut();
+  pointcut.setMappedName("save");
+  DefaultPointcutAdvisor advisor = new DefaultPointcutAdvisor(pointcut, new TimeAdvice());
+  proxyFactory.addAdvisor(advisor);
+
+  ServiceInterface proxy = (ServiceInterface)proxyFactory.getProxy();
+
+  proxy.logic();
+  proxy.save();
+}
+
+@Slf4j
+static class ServiceInterface {
+  public void logic(){
+    log.info("로직 실행");
+  }
+
+  public void save(){
+    log.info("저장 실행");
+  }
+}
+```
+
+이렇게 테스트 해볼 수 있다.
+
+
+
+어드바이저는 하나의 포인트 컷과 하나의 어드바이스를 가지고 있다. 만약 여러 어드바이저를 하나의 `target`에 적용하려면 어떻게 할까?
+
+```java
+@Test
+void multiAdvisorTest() {
+  ServiceInterface target = new ServiceInterface();
+  ProxyFactory proxyFactory = new ProxyFactory(target);
+  NameMatchMethodPointcut pointcut = new NameMatchMethodPointcut();
+  pointcut.setMappedName("save");
+  DefaultPointcutAdvisor advisor1 = new DefaultPointcutAdvisor(pointcut, new TimeAdvice());
+  DefaultPointcutAdvisor advisor2 = new DefaultPointcutAdvisor(pointcut, new TimeAdvice());
+
+  proxyFactory.addAdvisor(advisor2);
+  proxyFactory.addAdvisor(advisor1);
+
+  ServiceInterface proxy = (ServiceInterface)proxyFactory.getProxy();
+
+  proxy.logic();
+  proxy.save();
+}
+```
+
+프록시 팩토리에 여러 어드바이저를 더하면 된다. 참고로 더하는 **순서도 중요**하다. 등록하는 순서대로 어드바이저를 호출한다.
+
+
+
+**중요**
+
+스프링의 AOP를 보면 AOP 적용수만큼 프록시가 생성된다고 착각할 수 있다. 실제로는 AOP를 적용할 때, 최적화를 진행해서 프록시는 하나만 만들고 여러 어드바이저를 적용한다. 하나의 target에 여러 AOP가 적용되어도 스프링의 AOP는 `target`마다 **하나의 프록시만 생성**한다.
+
