[추가] reactor 변환되는 내용 추가

--- a/22. Spring Webflux/03. Operators.md
+++ b/22. Spring Webflux/03. Operators.md
@@ -316,3 +316,33 @@ private <T, R> Publisher<R> mapPub(Publisher<T> pub, Function<T, R> f) {
 
 
 물론 실제로는 이렇게 직접 만들어 볼 일은 없다. 라이브러리들이 아주 잘 제공해주고 있기 때문이다. 그리고 그 중 하나가 `Reactor`이다.
+
+Reactor는 지금 껏 만들었던 publisher로 `Flux` 라는 것을 제공한다. iterPub, mapPub 같이 만들었던 것들을 제공하며 그보다 많은 기능을 제공한다.
+
+`Flux`를 만들어서 테스트해보자.
+
+```java
+@Test
+void basic() {
+  Flux.create(e -> {
+    e.next(1);
+    e.next(2);
+    e.complete();
+  }).subscribe(System.out::println);
+}
+```
+
+onSubscribe, request같은 것도 내부적으로 일어날까? 이를 확인하기 위해서 중간에 `log`라는 것을 넣어두었다. 이는 데이터 가공없이 그냥 log만 남겨주는 publisher이다. 확인하고 싶은 부분에 log를 넣어주면 위와 아래에 어떻게 데이터가 진행되는 지 확인할 수 있는 유용한 publis
+
+```
+[main] DEBUG reactor.util.Loggers - Using Slf4j logging framework
+[main] INFO reactor.Flux.Create.1 - onSubscribe(FluxCreate.BufferAsyncSink)
+[main] INFO reactor.Flux.Create.1 - request(unbounded)
+[main] INFO reactor.Flux.Create.1 - onNext(1)
+1
+[main] INFO reactor.Flux.Create.1 - onNext(2)
+2
+[main] INFO reactor.Flux.Create.1 - onComplete()
+```
+
+그러면 위와 같이 onSubscribe, request, onNext, onComplete가 다 호출되었음을 확인할 수 있다.
