--- a/22. Spring Webflux/09. Mono and Flux.md
+++ b/22. Spring Webflux/09. Mono and Flux.md
@@ -1,10 +1,12 @@
-# Mono
+# Mono and Flux
 
 
 
 스프링 4점대까지 비동기를 어떻게 했는지를 공부해봤다. 단순 콜백부터, 함수형 느낌으로, 그리고 `CompletableFuture`에 대해서도 봤다. **Spring 5**에서 많은 부분이 바뀌었다. `AsyncRestTemplate` 같은 경우는 아예 사용하지 말라고 바뀌어버렸다. 리액티브 스타일도 아니고, 완전히 대체할 `WebClient` 라는 것이 나왔다.
 
 
+
+### Mono
 
 기존의 코드들을 다 변경해보자. 먼저 DeferredResult로 반환했던 것을 이젠 `Mono`혹은 `Flux` 로 반환한다. `Mono`는 파라미터를 한번에 다 던지고, 리턴을 한번에 다 담는 그런 형식이다. 결과가 여러개라면 Collection처럼 사용하는 것 처럼 된다. 대충 사용법부터 이해해보자.
 
@@ -64,3 +66,53 @@ public Mono<String> test() {
 
 보면, 실행은 전혀 다르다. 구독하기 이전엔 아무 것도 하지 않아서 그냥 로그는 다 찍히고 스프링에 의해 구독이 되고 나서 request를 받아야 데이터를 흘려보낸다.
 
+
+
+### Flux
+
+데이터를 여러 개를 내보내야 한다면 `Mono`가 아닌 `Flux`를 사용한다. 여러 개라 하면 0개부터 n개를 의미한다. 근데 이도 약간 오해할 수 있다. List 같은 컬렉션을 반환하지 못한다는 의미는 아니다. 예를 들어 List를 반환하고 싶으면 `Mono<List<String>>` 과 같은 타입으로 반환이 가능하다.
+
+객체를 기준으로 2개 이상이라면, Mono를 사용할 수 없다. 이를 컬렉션으로 담을 수 있다면 괜찮지만, 그냥 객체 2개이상을 반환하는 것이라면 `Flux`를 사용해야 한다.
+
+만약 List를 반환한다면 다음과 같이 그냥 onNext로 객체 1개를 넘기는 것처럼 되기 때문에 가능하다. 테스트 해본다면 다음과 같다.
+
+```java
+@GetMapping("/test")
+public Mono<String> test() {
+  Mono<String> mono = Mono.just(List.of(1, 2, 3)).log();
+  return mono;
+}
+```
+
+이런식으로 반환한다면 밑과 같은 결과가 나온다.
+
+```java
+[ctor-http-nio-2] reactor.Mono.Just.1                      : | onSubscribe([Synchronous Fuseable] Operators.ScalarSubscription)
+[ctor-http-nio-2] reactor.Mono.Just.1                      : | request(unbounded)
+[ctor-http-nio-2] reactor.Mono.Just.1                      : | onNext([1, 2, 3])
+[ctor-http-nio-2] reactor.Mono.Just.1                      : | onComplete()
+```
+
+근데 이를 이제 여러 개의 객체를 이용하여 만드는 것을 가정하여 Flux로 만든다면 다음과 같이 나온다.
+
+중간에 mono 대신 Flux를 이용하여 반환해보자.
+
+```java
+Flux<String> flux = Flux.just("1", "2", "3").log();
+```
+
+그러면 결과는 다음과 같다.
+
+```java
+[ctor-http-nio-2] reactor.Flux.Array.1                     : | onSubscribe([Synchronous Fuseable] FluxArray.ArraySubscription)
+[ctor-http-nio-2] reactor.Flux.Array.1                     : | request(1)
+[ctor-http-nio-2] reactor.Flux.Array.1                     : | onNext(1)
+[ctor-http-nio-2] reactor.Flux.Array.1                     : | request(127)
+[ctor-http-nio-2] reactor.Flux.Array.1                     : | onNext(2)
+[ctor-http-nio-2] reactor.Flux.Array.1                     : | onNext(3)
+[ctor-http-nio-2] reactor.Flux.Array.1                     : | onComplete()
+```
+
+onNext가 3번 호출됨을 알 수 있다. 객체가 3개이고 3번의 흐름을 보낸 것이다.
+
+아주 기본적인 내용만 확인하고 이제 정말 실습을 만들어보려 한다.
