[추가] POST처리 코드 추가

--- a/25. Spring Boot Webflux/02. Start Project.md
+++ b/25. Spring Boot Webflux/02. Start Project.md
@@ -171,3 +171,55 @@ data:{"name":"Sesame chicken","delivered":true}
 ### 참고
 
 데이터를 변환하는 것은 어느 계층에서든 쉽게 가능하다. 하지만 스프링 부트 프로젝트 리더인 필 웹은 웹 컨트롤러를 가능한 한 가볍게 가져가는 것을 추천한다. 웹 컨트롤러에는 비즈니스 로직을 담지 말고, 웹 요청 내용을 해석해서 **적절한 서비스 메서드에 처리를 위임하고 결과물을 반환하는 역할**을 부여하는 편이 좋다. 웹 컨트롤러는 GET 요청을 받으면 해당 서비스를 호출해서 서비스 메서드가 반환하는 데이터를 클라이언트에 전송할 수 있도록 직렬화 한다. PUT이나 POST의 요청이라면 요청에 포함된 입력데이터를 추출하고 적절한 메서드에 전달하는 역할을 담당한다.
+
+
+
+### 메인에 장바구니를 뿌려보자.
+
+```java
+@Override
+public Mono<Cart> findOne(String id) {
+  return cartRepository.findById(id)
+    .defaultIfEmpty(new Cart())
+    .flatMap(cart -> cart.getCartItems().stream()
+             .filter(cartItem -> cartItem.getItem().getId().equals(id))
+             .findAny()
+             .map(cartItem -> {
+               cartItem.increment();
+               return Mono.just(cart);
+             })
+             .orElseGet(() -> {
+               return itemRepository.findById(id)
+                 .map(CartItem::new)
+                 .map(cartItem -> {
+                   cart.getCartItems().add(cartItem);
+                   return cart;
+                 });
+             }))
+    .flatMap(cartRepository::save);
+}
+```
+
+스트림을 자유 자재로 사용할 수 있다는 것을 전제로 한다. 만약 모른다면 모던 자바인 액션의 책을 강추한다.
+
+근데 스트림에 익숙하지 않으면 위 코드가 매우 복잡해보이고, 어려워보일 수 있다. 전통적인 반복문과 스트림 API의 차이는 크다. 익숙한 전통 반복문을 만들면,
+
+```java
+for (CartItem cartItem : cart.getCartItems()) {
+  if (cartItem.getItem().getId().equals("5")){
+    found = true;
+  }
+} 
+
+if (found){
+  // 수량증가
+} else{
+  // 새 항목 추가
+}
+```
+
+오히려 이게 보기 좋아보인다. 하지만 리액티브 프로그램이인 이런 방식을 사용하지 않는다.
+
+가장 큰 이유는 side effect이다. 명령형 프로그래밍에서는 모든 로컬 변수에 부수 효과가 발생할 수 있다. 상태를 만들면 이 상태 값을 바꿀 수 있는 수많은 다른 API를 거치면서 상태가 어떻게 변경되는지 파악하기 어려워진다. 스트림 API는 이런 단점을 극복할 수 있다.
+
+중간 상태가 없어서 초깃값 문제나, 값을 잘못 변경하는 위험이 아예 사라진다. 따라서 좋은 방식이다.
