[수정] 사용하지 않는 세터 제거

--- a/25. Spring Boot Webflux/02. Start Project.md
+++ b/25. Spring Boot Webflux/02. Start Project.md
@@ -223,3 +223,43 @@ if (found){
 가장 큰 이유는 side effect이다. 명령형 프로그래밍에서는 모든 로컬 변수에 부수 효과가 발생할 수 있다. 상태를 만들면 이 상태 값을 바꿀 수 있는 수많은 다른 API를 거치면서 상태가 어떻게 변경되는지 파악하기 어려워진다. 스트림 API는 이런 단점을 극복할 수 있다.
 
 중간 상태가 없어서 초깃값 문제나, 값을 잘못 변경하는 위험이 아예 사라진다. 따라서 좋은 방식이다.
+
+
+
+### 데이터베이스 쿼리
+
+몽고디비를 이용해 데이터를 조회하고 저장하지만, 환상적이라고 좋은 점을 보지 못했다. 실제 이커머스 서비스에는 데이터베이스에서 id로 조회하는 기능보단 상품을 모두 보여주고 고객에게 상품을 고르게 하는 것이 일반적이다. 혹은 고객이 검색어를 입력하고 그에 맞는 상품 목록을 보여주는 기능도 필요하다.
+
+Spring Data를 이용하면 보통 쿼리문의 80%는 스프링이 작성해준다. 메서드 이름규칙만 잘 따르면 스프링이 대신해서 쿼리를 작성해서 날려준다.
+
+```java
+Flux<Item> findByNameContaining(String partialName);
+```
+
+이 외에도 많은 규칙들이 있다. 그 규칙들은 따로 정리하진 않겠다.
+
+만약 충분하지 않다면 어떻게 해야할까? 메서드이름이 너무 길어지는 것도 보기 좋지 않아서 직접 쿼리를 작성해야할 수도 있다. 그런 경우 커스텀 쿼리를 만들 수 있다.
+
+```java
+@Query("{ 'name' : ?0, 'age' : ?1}")
+Flux<Item> findItemsForCustomerMonthlyReport(String name, int age);
+```
+
+스프링 데이터의 `@Query` 애너테이션은 직접 명시한 쿼리문을 사용한다.
+
+
+
+#### Example 쿼리
+
+쿼리 자동 생성과 직접 쿼리 작성을 사용하면 대부분의 일을 해결할 수 있다. 하지만 필터링 기능에서 애를 먹는다. 예를 들어 name값을 기준으로 검색하는 기능을 추가한다 해보자.
+
+`findByName(String name)` 메서드를 추가하면 된다. 근데 만약 `name`값이 전부가 아니라 부분 일치라고 가정해보자. 그럼 `findByNameContaining(String partialName)` 을 사용하면 된다. 너무 쉽다. 근데 name이 아니라 description을 검색조건에 포함해야 한다면 어떻게 할까? 어렵지는 않다. 네이밍 규칙에 따라 다음과 같이 작성할 수 있다.
+
+`findByNameAndDescription(String name, String description)`을 사용하면 된다. 근데 여기서 대소문자를 구분없이 부분 일치 데이터도 포함해야 한다면? 어렵지 않다. 다음과 같다.
+
+`findByNameContainingAndDescriptionContainingAllIgnoreCase(String partialName, String partialDescription)`이라고 쓰면 된다. 어렵지는 않다 근데, 요구사항이 더 추가되거나 조건을 and혹은 or로 선택할 수 있게 해달라고 한다면? 이름이 점차 알아보기도 힘들고 사용하면 코드가 얼마나 길어질지 감도 안온다. 이런 코드는 분명 유지보수는 망한다. 이를 해결하는 방법이 Example 쿼리이다.
+
+이를 사용하려면 `ReactiveQueryByExampleExecutor<T>` 를 상속받아야 한다. 인터페이스는 다중 상속이 가능하므로 그냥 상속받으면 된다.이를 이용하면 파라미터를 인자로 받아서 검색을 수행하고, 하나 또는 그 이상의 T 타입 값을 반환한다. 하지만, Querydsl이라는 좋은 라이브러리가 있으므로, 이를 학습하도록 하자.
+
+이 외에도 평문형 API도 있고 MongoOperations도 있다. 다양한 것중 선택은 프로젝트 상황마다 다르므로 사용환경에서 정하는 것이 좋을 것 같다.
+
